--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
